--- a/Source/Clima/MeadowClimaProKit/MeadowClimaProKit.csproj
+++ b/Source/Clima/MeadowClimaProKit/MeadowClimaProKit.csproj
@@ -10,16 +10,16 @@
     <LangVersion>9.0</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Meadow.F7" Version="0.*" />
-    <PackageReference Include="Meadow.Foundation" Version="0.*" />
-	<PackageReference Include="Meadow.Foundation.Sensors.Atmospheric.Bme68x" Version="0.*" />
-	<PackageReference Include="Meadow.Foundation.Sensors.Atmospheric.Bme280" Version="0.*" />
-    <PackageReference Include="Meadow.Foundation.Sensors.Weather.SwitchingAnemometer" Version="0.*" />
-	<PackageReference Include="Meadow.Foundation.Sensors.Weather.SwitchingRainGauge" Version="0.*" />
-    <PackageReference Include="Meadow.Foundation.Sensors.Weather.WindVane" Version="0.*" />
+    <PackageReference Include="Meadow.F7" Version="0.31.1" />
+    <PackageReference Include="Meadow.Foundation" Version="0.33.1" />
+	<PackageReference Include="Meadow.Foundation.Sensors.Atmospheric.Bme68x" Version="0.1.7" />
+	<PackageReference Include="Meadow.Foundation.Sensors.Atmospheric.Bme280" Version="0.5.57" />
+    <PackageReference Include="Meadow.Foundation.Sensors.Weather.SwitchingAnemometer" Version="0.1.17" />
+	<PackageReference Include="Meadow.Foundation.Sensors.Weather.SwitchingRainGauge" Version="0.1.7" />
+    <PackageReference Include="Meadow.Foundation.Sensors.Weather.WindVane" Version="0.1.22" />
 	<PackageReference Include="Meadow.Foundation.Web.Maple.Server" Version="0.*" />
+	<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="sqlite-net-static" Version="1.*" />
-    <PackageReference Include="System.Text.Json" Version="6.0.2" />
   </ItemGroup>
   <Import Project="..\CommonContracts\CommonContracts.projitems" Label="Shared" />
 </Project>
