--- a/Source/Clima/MeadowClimaProKit/MeadowClimaProKit.csproj
+++ b/Source/Clima/MeadowClimaProKit/MeadowClimaProKit.csproj
@@ -18,8 +18,8 @@
 	<PackageReference Include="Meadow.Foundation.Sensors.Weather.SwitchingRainGauge" Version="0.1.7" />
     <PackageReference Include="Meadow.Foundation.Sensors.Weather.WindVane" Version="0.1.22" />
 	<PackageReference Include="Meadow.Foundation.Web.Maple.Server" Version="0.*" />
-	<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="sqlite-net-static" Version="1.*" />
+    <PackageReference Include="System.Text.Json" Version="6.0.2" />
   </ItemGroup>
   <Import Project="..\CommonContracts\CommonContracts.projitems" Label="Shared" />
 </Project>
