--- a/Source/Clima/MeadowClimaProKit.Diagnostics/MeadowClimaProKit.Diagnostics.csproj
+++ b/Source/Clima/MeadowClimaProKit.Diagnostics/MeadowClimaProKit.Diagnostics.csproj
@@ -10,14 +10,13 @@
     <LangVersion>9.0</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Meadow.F7" Version="0.*" />
-    <PackageReference Include="Meadow.Foundation" Version="0.*" />
-    <PackageReference Include="Meadow.Foundation.Sensors.Atmospheric.Bme68x" Version="0.*" />
-	<PackageReference Include="Meadow.Foundation.Sensors.Atmospheric.Bme280" Version="0.*" />
-    <PackageReference Include="Meadow.Foundation.Sensors.Weather.SwitchingAnemometer" Version="0.*" />
-    <PackageReference Include="Meadow.Foundation.Sensors.Weather.SwitchingRainGauge" Version="0.*" />
-    <PackageReference Include="Meadow.Foundation.Sensors.Weather.WindVane" Version="0.*" />
-    <PackageReference Include="System.Text.Json" Version="6.0.2" />
+    <PackageReference Include="Meadow.F7" Version="0.32.1" />
+    <PackageReference Include="Meadow.Foundation" Version="0.34.1" />
+    <PackageReference Include="Meadow.Foundation.Sensors.Atmospheric.Bme68x" Version="0.1.10" />
+    <PackageReference Include="Meadow.Foundation.Sensors.Weather.SwitchingAnemometer" Version="0.1.20" />
+    <PackageReference Include="Meadow.Foundation.Sensors.Weather.SwitchingRainGauge" Version="0.1.10" />
+    <PackageReference Include="Meadow.Foundation.Sensors.Weather.WindVane" Version="0.1.25" />
+    <PackageReference Include="System.Text.Json" Version="6.0.6" />
   </ItemGroup>
   <Import Project="..\CommonContracts\CommonContracts.projitems" Label="Shared" />
 </Project>
