--- a/Source/Clima/MeadowClimaProKit/MeadowClimaProKit.csproj
+++ b/Source/Clima/MeadowClimaProKit/MeadowClimaProKit.csproj
@@ -1,25 +1,24 @@
 ﻿<Project Sdk="Meadow.Sdk/1.1.0">
-  <PropertyGroup>    
+  <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AssemblyName>App</AssemblyName>
-    <Nullable>enable</Nullable>  
+    <Nullable>enable</Nullable>
   </PropertyGroup>
   <PropertyGroup>
     <LangVersion>9.0</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Meadow.F7" Version="0.31.1" />
-    <PackageReference Include="Meadow.Foundation" Version="0.33.1" />
-	<PackageReference Include="Meadow.Foundation.Sensors.Atmospheric.Bme68x" Version="0.1.7" />
-	<PackageReference Include="Meadow.Foundation.Sensors.Atmospheric.Bme280" Version="0.5.57" />
-    <PackageReference Include="Meadow.Foundation.Sensors.Weather.SwitchingAnemometer" Version="0.1.17" />
-	<PackageReference Include="Meadow.Foundation.Sensors.Weather.SwitchingRainGauge" Version="0.1.7" />
-    <PackageReference Include="Meadow.Foundation.Sensors.Weather.WindVane" Version="0.1.22" />
-	<PackageReference Include="Meadow.Foundation.Web.Maple.Server" Version="0.*" />
+    <PackageReference Include="Meadow.F7" Version="0.32.1" />
+    <PackageReference Include="Meadow.Foundation" Version="0.34.1" />
+	<PackageReference Include="Meadow.Foundation.Sensors.Atmospheric.Bme68x" Version="0.1.10" />
+    <PackageReference Include="Meadow.Foundation.Sensors.Weather.SwitchingAnemometer" Version="0.1.20" />
+	<PackageReference Include="Meadow.Foundation.Sensors.Weather.SwitchingRainGauge" Version="0.1.10" />
+    <PackageReference Include="Meadow.Foundation.Sensors.Weather.WindVane" Version="0.1.25" />
+	<PackageReference Include="Meadow.Foundation.Web.Maple.Server" Version="0.5.3" />
     <PackageReference Include="sqlite-net-static" Version="1.*" />
-    <PackageReference Include="System.Text.Json" Version="6.0.2" />
+    <PackageReference Include="System.Text.Json" Version="6.0.6" />
   </ItemGroup>
   <Import Project="..\CommonContracts\CommonContracts.projitems" Label="Shared" />
 </Project>
